# notes

./: README.md  docker-compose.yml  pyproject.toml
notes/: Dockerfile  main.py
notes/actions/: create_superuser.py
notes/alembic/versions/: 2024_08_26_1457-8a4701aa97d2_create_users_table.py  2024_08_27_1201-a8e6a70c5bad_create_users_table.py  2024_08_27_1233-65498c303894_create_access_tokens_table.py  2024_08_28_0329-c16ba1938c7a_create_notes_table.py
notes/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  notes.py  users.py
notes/core/: config.py
notes/core/authentication/: transport.py
notes/core/models/: __init__.py  db_helper.py  note.py  user.py
notes/core/schemas/: note.py  user.py
notes/crud/: notes.py  users.py
notes/speller/: speller.py
